--- a/html4.html
+++ b/html4.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>1</title>
-    <link rel="stylesheet" href="http://bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://bootstrap.min.js"></script>
+    <script src="bootstrap.min.js"></script>
     <style>
         .a{margin:0px auto;
             margin-top: 100px;
