--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <div class="hover-bg"> <a href="html3.html" >
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>Web Design</small>
+                                <small>Canvas Development</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/html3.png" class="img-responsive" alt="Project Title"> </a> </div>
@@ -112,7 +112,7 @@
                         <div class="hover-bg"> <a href="html4.html" >
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>App Development</small>
+                                <small>Canvas Development</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/html4.png" class="img-responsive" alt="Project Title"> </a> </div>
@@ -123,7 +123,7 @@
                         <div class="hover-bg"> <a href="html5.html" >
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>Branding</small>
+                                <small>Canvas Development</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/html5.png" class="img-responsive" alt="Project Title"> </a> </div>
@@ -134,7 +134,7 @@
                         <div class="hover-bg"> <a href="html6.html" >
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>App Development, Branding</small>
+                                <small>Web Design, Project</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/html6.png" class="img-responsive" alt="Project Title"> </a> </div>
@@ -145,7 +145,7 @@
                         <div class="hover-bg"> <a href="html7.html">
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>Web Design</small>
+                                <small>Project</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/html7.png" class="img-responsive" alt="Project Title"> </a> </div>
@@ -156,7 +156,7 @@
                         <div class="hover-bg"> <a href="school1.html" >
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>App Development</small>
+                                <small>Project</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/school1.png" class="img-responsive" alt="Project Title"> </a> </div>
@@ -167,7 +167,7 @@
                         <div class="hover-bg"> <a href="editable.html" >
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>App Development</small>
+                                <small>Project</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/editable.png" class="img-responsive" alt="Project Title"> </a> </div>
@@ -178,7 +178,7 @@
                         <div class="hover-bg"> <a href="jingdong.html" >
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>App Development</small>
+                                <small>Project</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/jd1.png" class="img-responsive" alt="Project Title"> </a> </div>
