--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="hover-bg"> <a href="html8.htmlg">
                             <div class="hover-text">
                                 <h4>Project Title</h4>
-                                <small>App Development</small>
+                                <small>svg</small>
                                 <div class="clearfix"></div>
                                 <i class="fa fa-search"></i> </div>
                             <img src="img/html8.png" class="img-responsive" alt="Project Title"> </a> </div>
