--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <div class="col-sm-6 col-md-3 col-lg-3 app">
                     <div class="portfolio-item">
-                        <div class="hover-bg"> <a href="html8.htmlg">
+                        <div class="hover-bg"> <a href="html8.html">
                             <div class="hover-text">
                                 <h4>Project Title</h4>
                                 <small>svg</small>
