--- a/html6.html
+++ b/html6.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>1</title>
     <link rel="stylesheet" href="bootstrap.min.css">
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="jquery-3.1.0.js"></script>
     <script src="bootstrap.min.js"></script>
 
 
