--- a/editable.html
+++ b/editable.html
@@ -127,10 +127,9 @@
         <pre class="prettyprint  prettyprinted">inputObj.keydown(function(e){.....}</pre>
         <p>当然里面还有其他他按键操作，比如说上、下、左、右、Esc、Enter</p>
         <h4 id="one">Feeling</h4>
-        现在市面上有很多更好用的插件，但是有的很难理解，我们团队就开发了一个简单的editable插件。没有一件事是一个团队
-        完成不了的，这个插件融合了我们四人团队的心血和努力，能把我们想要的东西放到小于5k的东西里面，并没有改变任何CSS、
+        现在市面上有很多更好用的插件，但是有的很难理解，我开发了一个简单的editable插件。能把想要的东西放到小于5k的东西里面，并没有改变任何CSS、
         DOM里面的内容，并且不阻碍其正常运行。jQuery这门知识真的很强大，带给我们的是快捷和方便，谁用谁知道，用了都说好。
-        由于我们不是专业人员，没有进行正规的测试，所展现的这些仅供参考，谢谢。
+        由于我不是专业人员，没有进行正规的测试，所展现的这些仅供参考，谢谢。
 
         <h4 id="two">Answers for your questions</h4>
         问题：不会用怎么办？
